<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Empleado"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/Empleado" />

    <EditText
        android:id="@+id/empleado"
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:text="@string/Salario" />

    <EditText
        android:id="@+id/salario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:text="@string/Horas_Extra" />

    <EditText
        android:id="@+id/horasextra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/TextView21"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/Valor_hora_Extra" />

    <EditText
        android:id="@+id/valorhora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:text="@string/Pensiòn" />

    <EditText
        android:id="@+id/pension"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:text="@string/Salud" />

    <EditText
        android:id="@+id/salud"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:text="@string/Salario_Total" />

    <EditText
        android:id="@+id/salariototal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btncalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Calcular" />

</LinearLayout>